update the docs

--- a/docs/libraries/azure-portal-core/reference/index.mdx
+++ b/docs/libraries/azure-portal-core/reference/index.mdx
@@ -41,6 +41,7 @@ npm install --save-peer @azure-tools/typespec-azure-portal-core
 - [`@browse`](./decorators.md#@Azure.Portal.browse)
 - [`@displayName`](./decorators.md#@Azure.Portal.displayName)
 - [`@marketplaceOffer`](./decorators.md#@Azure.Portal.marketplaceOffer)
+- [`@promotion`](./decorators.md#@Azure.Portal.promotion)
 
 ### Models
 
@@ -48,3 +49,4 @@ npm install --save-peer @azure-tools/typespec-azure-portal-core
 - [`BrowseOptions`](./data-types.md#Azure.Portal.BrowseOptions)
 - [`FilePath`](./data-types.md#Azure.Portal.FilePath)
 - [`marketplaceOfferOptions`](./data-types.md#Azure.Portal.marketplaceOfferOptions)
+- [`PromotionOptions`](./data-types.md#Azure.Portal.PromotionOptions)
