Update doc and changelog

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -102,6 +102,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceDeleteAsyncBase`](./interfaces.md#Azure.ResourceManager.ArmResourceDeleteAsyncBase)
 - [`ArmResourceDeleteSync`](./interfaces.md#Azure.ResourceManager.ArmResourceDeleteSync)
 - [`ArmResourceDeleteWithoutOkAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceDeleteWithoutOkAsync)
+- [`ArmResourceHead`](./interfaces.md#Azure.ResourceManager.ArmResourceHead)
 - [`ArmResourceListAtScope`](./interfaces.md#Azure.ResourceManager.ArmResourceListAtScope)
 - [`ArmResourceListByParent`](./interfaces.md#Azure.ResourceManager.ArmResourceListByParent)
 - [`ArmResourcePatchAsync`](./interfaces.md#Azure.ResourceManager.ArmResourcePatchAsync)
