change to singular for data type

--- a/docs/libraries/azure-portal-core/reference/index.mdx
+++ b/docs/libraries/azure-portal-core/reference/index.mdx
@@ -45,8 +45,8 @@ npm install --save-peer @azure-tools/typespec-azure-portal-core
 
 ### Models
 
-- [`AboutOptions`](./data-types.md#Azure.Portal.AboutOptions)
-- [`BrowseOptions`](./data-types.md#Azure.Portal.BrowseOptions)
+- [`AboutOption`](./data-types.md#Azure.Portal.AboutOption)
+- [`BrowseOption`](./data-types.md#Azure.Portal.BrowseOption)
 - [`FilePath`](./data-types.md#Azure.Portal.FilePath)
-- [`marketplaceOfferOptions`](./data-types.md#Azure.Portal.marketplaceOfferOptions)
-- [`PromotionOptions`](./data-types.md#Azure.Portal.PromotionOptions)
+- [`marketplaceOfferOption`](./data-types.md#Azure.Portal.marketplaceOfferOption)
+- [`PromotionOption`](./data-types.md#Azure.Portal.PromotionOption)
