--- a/packages/samples/test/output/azure/core/data-plane/language/authoring/@typespec/openapi3/openapi.yaml
+++ b/packages/samples/test/output/azure/core/data-plane/language/authoring/@typespec/openapi3/openapi.yaml
@@ -21,7 +21,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/PagedProject'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -49,7 +49,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/PagedSupportedLanguage'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -77,7 +77,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/PagedTrainingConfigVersion'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -128,7 +128,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Project'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -165,7 +165,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Project'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -218,7 +218,7 @@ paths:
                     description: Error object that describes the error when status is "Failed".
                 description: Provides status details for long running operations.
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -249,7 +249,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/PagedDeployment'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -286,7 +286,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Deployment'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -342,7 +342,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Deployment'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -408,7 +408,7 @@ paths:
                     description: Error object that describes the error when status is "Failed".
                 description: Provides status details for long running operations.
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -451,7 +451,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/DeploymentJob'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -494,7 +494,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/SwapDeploymentsJob'
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -528,7 +528,7 @@ paths:
                 type: string
                 format: uri
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -570,7 +570,7 @@ paths:
                 type: string
                 format: uri
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -604,7 +604,7 @@ paths:
                 type: string
                 format: uri
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
@@ -638,7 +638,7 @@ paths:
                 type: string
                 format: uri
         default:
-          description: A response containing error details.
+          description: An unexpected error response.
           headers:
             x-ms-error-code:
               required: false
