Adding updated doc

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -94,6 +94,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceActionNoContentSync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionNoContentSync)
 - [`ArmResourceActionNoResponseContentAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionNoResponseContentAsync)
 - [`ArmResourceActionSync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionSync)
+- [`ArmResourceCheckExistence`](./interfaces.md#Azure.ResourceManager.ArmResourceCheckExistence)
 - [`ArmResourceCreateOrReplaceAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceCreateOrReplaceAsync)
 - [`ArmResourceCreateOrReplaceSync`](./interfaces.md#Azure.ResourceManager.ArmResourceCreateOrReplaceSync)
 - [`ArmResourceCreateOrUpdateAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceCreateOrUpdateAsync)
@@ -102,7 +103,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceDeleteAsyncBase`](./interfaces.md#Azure.ResourceManager.ArmResourceDeleteAsyncBase)
 - [`ArmResourceDeleteSync`](./interfaces.md#Azure.ResourceManager.ArmResourceDeleteSync)
 - [`ArmResourceDeleteWithoutOkAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceDeleteWithoutOkAsync)
-- [`ArmResourceHead`](./interfaces.md#Azure.ResourceManager.ArmResourceHead)
 - [`ArmResourceListAtScope`](./interfaces.md#Azure.ResourceManager.ArmResourceListAtScope)
 - [`ArmResourceListByParent`](./interfaces.md#Azure.ResourceManager.ArmResourceListByParent)
 - [`ArmResourcePatchAsync`](./interfaces.md#Azure.ResourceManager.ArmResourcePatchAsync)
@@ -131,6 +131,8 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmOperationStatus`](./data-types.md#Azure.ResourceManager.ArmOperationStatus)
 - [`ArmResourceCreatedResponse`](./data-types.md#Azure.ResourceManager.ArmResourceCreatedResponse)
 - [`ArmResourceCreatedSyncResponse`](./data-types.md#Azure.ResourceManager.ArmResourceCreatedSyncResponse)
+- [`ArmResourceExistsResponse`](./data-types.md#Azure.ResourceManager.ArmResourceExistsResponse)
+- [`ArmResourceNotFoundResponse`](./data-types.md#Azure.ResourceManager.ArmResourceNotFoundResponse)
 - [`ArmResourceUpdatedResponse`](./data-types.md#Azure.ResourceManager.ArmResourceUpdatedResponse)
 - [`ArmResponse`](./data-types.md#Azure.ResourceManager.ArmResponse)
 - [`CustomerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CustomerManagedKeyEncryption)
