--- a/.chronus/changes/flatten-2024-1-20-11-30-53.md
+++ b/.chronus/changes/flatten-2024-1-20-11-30-53.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-autorest"
 ---
 
-Support new added @flattenProperty decorator.
+Support `@flattenProperty` decorator.
