--- a/docs/libraries/azure-portal-core/reference/index.mdx
+++ b/docs/libraries/azure-portal-core/reference/index.mdx
@@ -48,5 +48,6 @@ npm install --save-peer @azure-tools/typespec-azure-portal-core
 - [`AboutOptions`](./data-types.md#Azure.Portal.AboutOptions)
 - [`BrowseOptions`](./data-types.md#Azure.Portal.BrowseOptions)
 - [`FilePath`](./data-types.md#Azure.Portal.FilePath)
-- [`marketplaceOfferOptions`](./data-types.md#Azure.Portal.marketplaceOfferOptions)
+- [`LearnMoreDocsOptions`](./data-types.md#Azure.Portal.LearnMoreDocsOptions)
+- [`MarketplaceOfferOptions`](./data-types.md#Azure.Portal.MarketplaceOfferOptions)
 - [`PromotionOptions`](./data-types.md#Azure.Portal.PromotionOptions)
