--- a/docs/libraries/azure-portal-core/reference/index.mdx
+++ b/docs/libraries/azure-portal-core/reference/index.mdx
@@ -47,6 +47,7 @@ npm install --save-peer @azure-tools/typespec-azure-portal-core
 
 - [`AboutOptions`](./data-types.md#Azure.Portal.AboutOptions)
 - [`BrowseOptions`](./data-types.md#Azure.Portal.BrowseOptions)
+- [`DisplayNamesOptions`](./data-types.md#Azure.Portal.DisplayNamesOptions)
 - [`FilePath`](./data-types.md#Azure.Portal.FilePath)
 - [`LearnMoreDocsOptions`](./data-types.md#Azure.Portal.LearnMoreDocsOptions)
 - [`MarketplaceOfferOptions`](./data-types.md#Azure.Portal.MarketplaceOfferOptions)
