Fix @about.learnMoreDocs and @about.displayNames data type (#347)

--- a/docs/libraries/azure-portal-core/reference/index.mdx
+++ b/docs/libraries/azure-portal-core/reference/index.mdx
@@ -47,6 +47,8 @@ npm install --save-peer @azure-tools/typespec-azure-portal-core
 
 - [`AboutOptions`](./data-types.md#Azure.Portal.AboutOptions)
 - [`BrowseOptions`](./data-types.md#Azure.Portal.BrowseOptions)
+- [`DisplayNamesOptions`](./data-types.md#Azure.Portal.DisplayNamesOptions)
 - [`FilePath`](./data-types.md#Azure.Portal.FilePath)
-- [`marketplaceOfferOptions`](./data-types.md#Azure.Portal.marketplaceOfferOptions)
+- [`LearnMoreDocsOptions`](./data-types.md#Azure.Portal.LearnMoreDocsOptions)
+- [`MarketplaceOfferOptions`](./data-types.md#Azure.Portal.MarketplaceOfferOptions)
 - [`PromotionOptions`](./data-types.md#Azure.Portal.PromotionOptions)
