Updating doc links to TypeSpec.io

--- a/docs/release-notes/release-2022-10-12.md
+++ b/docs/release-notes/release-2022-10-12.md
@@ -6,7 +6,7 @@ title: October 2022
 
 This release contains **breaking changes**
 
-Change to compiler, rest libraries [See TypeSpec Core release notes](https://microsoft.github.io/typespec/docs/release-notes/release-2022-10-12/)
+Change to compiler, rest libraries [See TypeSpec Core release notes](https://typespec.io/docs/release-notes/release-2022-10-12/)
 
 - **`TypeSpec`**: Cannot `extends` or `is` a model expression via alias
 - **`Api`**: Removed `createProgram` and changed `compile` parameter order
