--- a/docs/release-notes/release-2022-12-07.md
+++ b/docs/release-notes/release-2022-12-07.md
@@ -8,11 +8,11 @@ title: December 2022
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2022-12-07)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2022-12-07)
 
 ## Breaking change
 
-See TypeSpec Core breaking changes in [release notes](https://microsoft.github.io/typespec/release-notes/release-2022-12-07)
+See TypeSpec Core breaking changes in [release notes](https://typespec.io/docs/release-notes/release-2022-12-07)
 
 ### `TypeSpec > @azure-tools/typespec-azure-core` - change in handling of extensible enums
 
