--- a/docs/release-notes/release-2023-02-07.md
+++ b/docs/release-notes/release-2023-02-07.md
@@ -8,7 +8,7 @@ title: February 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-02-07)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-02-07)
 
 ## New Features
 
