--- a/docs/release-notes/release-2023-04-11.md
+++ b/docs/release-notes/release-2023-04-11.md
@@ -8,7 +8,7 @@ title: April 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-04-11)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-04-11)
 
 ## New Features
 
