--- a/docs/release-notes/release-2023-05-10.md
+++ b/docs/release-notes/release-2023-05-10.md
@@ -4,7 +4,7 @@ title: May 2023
 
 # Release Notes May 2023 (2023-05-10)
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-05-10)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-05-10)
 
 ## New Features
 
