--- a/docs/release-notes/release-2023-07-11.md
+++ b/docs/release-notes/release-2023-07-11.md
@@ -8,7 +8,7 @@ title: July 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-07-11)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-07-11)
 
 ## New Features
 
@@ -59,4 +59,4 @@ See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-n
 
 ## Breaking Changes
 
-There are breaking changes in typespec core libraries, see [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-07-11) for details.
+There are breaking changes in typespec core libraries, see [release notes](https://typespec.io/docs/release-notes/release-2023-07-11) for details.
