--- a/docs/release-notes/release-2023-09-12.md
+++ b/docs/release-notes/release-2023-09-12.md
@@ -8,7 +8,7 @@ title: September 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-09-12)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-09-12)
 
 ## New Features
 
@@ -96,7 +96,7 @@ See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-n
 
 ## Breaking Changes
 
-- There are breaking changes in the TypeSpec core compiler, see [the release notes](https://microsoft.github.io/typespec/release-notes/release-2023-09-12) for details.
+- There are breaking changes in the TypeSpec core compiler, see [the release notes](https://typespec.io/docs/release-notes/release-2023-09-12) for details.
 
 ### `@azure-tools/typespec-azure-core` Breaking Changes
 
