--- a/docs/release-notes/release-2023-10-11.md
+++ b/docs/release-notes/release-2023-10-11.md
@@ -8,7 +8,7 @@ title: October 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-10-11)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-10-11)
 
 ## New Features
 
@@ -51,7 +51,7 @@ See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-n
 
 ## Breaking Changes
 
-- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://microsoft.github.io/typespec/release-notes/release-2023-10-11) for details.
+- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://typespec.io/docs/release-notes/release-2023-10-11) for details.
 
 ### `@azure-tools/typespec-azure-core` Breaking Changes
 
