--- a/docs/release-notes/release-2023-03-13.md
+++ b/docs/release-notes/release-2023-03-13.md
@@ -8,7 +8,7 @@ title: March 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-03-13)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-03-13)
 
 See [Cadl to TypeSpec rename and migration FAQ](./cadl-typespec-migration.md)
 
