--- a/docs/release-notes/release-2023-08-08.md
+++ b/docs/release-notes/release-2023-08-08.md
@@ -8,7 +8,7 @@ title: August 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-08-08)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-08-08)
 
 ## New Features
 
@@ -52,4 +52,4 @@ See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-n
 
 ## Breaking Changes
 
-- There are breaking changes in the TypeSpec core compiler, see [the release notes](https://microsoft.github.io/typespec/release-notes/release-2023-08-08) for details.
+- There are breaking changes in the TypeSpec core compiler, see [the release notes](https://typespec.io/docs/release-notes/release-2023-08-08) for details.
