--- a/docs/release-notes/release-2023-11-07.md
+++ b/docs/release-notes/release-2023-11-07.md
@@ -8,7 +8,7 @@ title: November 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-11-07)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-11-07)
 
 ## New Features
 
@@ -69,7 +69,7 @@ See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-n
 
 ## Breaking Changes
 
-- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://microsoft.github.io/typespec/release-notes/release-2023-11-07) for details.
+- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://typespec.io/docs/release-notes/release-2023-11-07) for details.
 
 ### Typescript types breaking change
 
