--- a/docs/release-notes/release-2023-12-06.md
+++ b/docs/release-notes/release-2023-12-06.md
@@ -8,7 +8,7 @@ title: December 2023
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2023-12-06)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2023-12-06)
 
 ## New Features
 
@@ -65,4 +65,4 @@ See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-n
 
 ## Breaking Changes
 
-- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://microsoft.github.io/typespec/release-notes/release-2023-12-06) for details.
+- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://typespec.io/docs/release-notes/release-2023-12-06) for details.
