--- a/docs/release-notes/release-2024-01-23.md
+++ b/docs/release-notes/release-2024-01-23.md
@@ -8,7 +8,7 @@ title: January 2024
 This release contains **breaking changes**
 :::
 
-See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-notes/release-2024-01-23)
+See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2024-01-23)
 
 ## New Features
 
@@ -56,4 +56,4 @@ See TypeSpec Core [release notes](https://microsoft.github.io/typespec/release-n
 
 ## Breaking Changes
 
-- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://microsoft.github.io/typespec/release-notes/release-2024-01-23) for details.
+- There are breaking changes in the TypeSpec core libraries, see [the release notes](https://typespec.io/docs/release-notes/release-2024-01-23) for details.
