switch to versioning entry in UsageFlags

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -14,12 +14,12 @@ This page documents what type definitions in TypeSpec are generated as in emitte
 
 ```typespec
 @versioned(Versions)
-@service()
+@service
 namespace My.Service;
 
 enum Versions {
-    v1,
-    v2
+  v1,
+  v2,
 }
 ```
 
@@ -45,7 +45,7 @@ public enum Versions
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-TODO
+TODO;
 ```
 
 </TabItem>
