--- a/docs/libraries/azure-core/reference/index.mdx
+++ b/docs/libraries/azure-core/reference/index.mdx
@@ -84,6 +84,7 @@ npm install --save-peer @azure-tools/typespec-azure-core
 
 - [`AadOauth2Auth`](./data-types.md#Azure.Core.AadOauth2Auth)
 - [`AadTokenAuthFlow`](./data-types.md#Azure.Core.AadTokenAuthFlow)
+- [`ArmResourceIdentifierAllowedResource`](./data-types.md#Azure.Core.ArmResourceIdentifierAllowedResource)
 - [`AzureApiKeyAuthentication`](./data-types.md#Azure.Core.AzureApiKeyAuthentication)
 - [`ClientRequestIdHeader`](./data-types.md#Azure.Core.ClientRequestIdHeader)
 - [`ConditionalRequestHeaders`](./data-types.md#Azure.Core.ConditionalRequestHeaders)
