--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -580,7 +580,7 @@ TODO;
 <TabItem value="java" label="Java" >
 
 ```java
-public enum ServiceServiceVersions implements ServiceVersion {
+public enum ServiceServiceVersion implements ServiceVersion {
     V1("v1"),
     V2("v2");
 }
